--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -153,6 +153,7 @@
     <string name="dialog_msg_load_cleanup_engine_error">Motorul de curăţare a fost deteriorat.</string>
     <string name="dialog_msg_stop_scan">"Opriți scanarea înainte de finalizare?"</string>
     <string name="dialog_msg_uninstall_apps">Dezinstalaţi aceste aplicaţii?</string>
+    <string name="dialog_msg_uninstall_apps_xspace">Dezinstalați aceste aplicații?（inclusiv aplicațiile clonate）?</string>
     <string name="dialog_ok_add_white_list_error">Am înțeles</string>
     <string name="dialog_title_add_white_list_error">Atenționare</string>
     <string name="dialog_title_backup_and_uninstall_apps">Creare copie de rezervă şi apoi dezinstalare</string>
@@ -433,8 +434,7 @@
     <string name="total_clean">Curățat în total: %s</string>
     <string name="total_clean_text">Curățat</string>
     <string name="traffic_top">TOP 5 aplicații consumatoare de date</string>
-    <string name="unlike">Nu, mulțumesc</string>
-    <string name="update_date_format">dd-MM-yyyy</string>
+    <string name="update_date_format">dd/MM/yyyy</string>
     <string name="virus_scan">Scanare pentru viruși</string>
   <string name="vungle_ad_name">ad-Vungle</string>
     <string name="white_list_ad_header">Anunţuri: %d</string>
