--- a/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
+++ b/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
@@ -44,6 +44,10 @@ Pentru ştergerea istoricului din Browser, utilizaţi setările Browser-ului."</
     <string name="menu_help">Ajutor</string>
     <string name="menu_settings">Setări căutare</string>
     <string name="network_unavailable">Nu se poate conecta la rețea</string>
+    <string name="permission_prompt_detail">Căutați filme, cărți, muzică, etc.</string>
+    <string name="permission_prompt_start">Permiteți</string>
+    <string name="permission_prompt_started_info">"Ați acordat permisiunea de căutare globală"</string>
+    <string name="permission_prompt_title">Doriți mai mult?</string>
     <string name="recent_apps">Aplicații recente</string>
     <string name="recently_shortcut_label">Comenzi rapide recente</string>
     <string name="remove_from_history">Vreţi să eliminați acest element din istoricul căutărilor?</string>
@@ -68,7 +72,20 @@ Pentru ştergerea istoricului din Browser, utilizaţi setările Browser-ului."</
     <string name="suggest_open_app_failed">"Nu s-a putut deschide aplicația"</string>
     <string name="swipe_up_summary">Glisați în sus pentru a accesa Căutarea globală</string>
     <string name="swipe_up_title">Glisați în sus</string>
+    <string name="switch_application">Aplicații</string>
+    <string name="switch_browser">Browser</string>
+    <string name="switch_contacts">Contacte</string>
+    <string name="switch_file">Fișiere</string>
+    <string name="switch_mms">Mesaje</string>
+    <string name="switch_notes">Note</string>
+    <string name="switch_online">Online</string>
+    <string name="switch_prompt_ignore">Ignorați</string>
+    <string name="switch_prompt_set">Vizualizați opțiunile</string>
+    <string name="switch_prompt_title">"Nu ați găsit %s?"</string>
+    <string name="switch_prompt_title_default">"Nu ați găsit ce ați căutat?"</string>
+    <string name="switch_setting">Setări</string>
     <string name="system_search_category_title">Telefon</string>
+    <string name="top_clicked">Elemente frecvente</string>
     <string name="voice_search_hint_quotation_end">\"</string>
     <string name="voice_search_hint_quotation_start">\"</string>
     <string name="voice_search_hint_title">Încercaţi să spuneţi:</string>
