--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -80,9 +80,9 @@
     <string name="screen_button_notification_text">Pentru a le reactiva, atingeți butoanele Acasă și Alimentare simultan.</string>
     <string name="screen_button_notification_title">Butoanele de navigare sunt dezactivate</string>
     <string name="screen_on_proximity_sensor_hint">Pentru a dezactiva această funcţie, apăsaţi butoanele Înapoi şi Volum▲ simultan.</string>
-    <string name="screen_on_proximity_sensor_hint_has_navigation_bar">Pentru a dezactiva această funcție, apăsați butonul Volum+.</string>
-    <string name="screen_on_proximity_sensor_summary">"Nu acoperiți zona portocalie a ecranului"</string>
-    <string name="screen_on_proximity_sensor_title">Prevenire apelare în buzunar</string>
+    <string name="screen_on_proximity_sensor_hint_has_navigation_bar">Pentru a dezactiva această funcție, apăsați butonul Volum▲.</string>
+    <string name="screen_on_proximity_sensor_summary">"Nu acoperiți zona difuzorului"</string>
+    <string name="screen_on_proximity_sensor_title">Modul În Buzunar</string>
     <string name="screen_paper_mode_enter_toast">Modul lectură este activat. Pentru a dezactiva această caracteristică, mergeți la Setări > Afișaj > Mod lectură.</string>
     <string name="screen_rotation_freeze_message">Rotirea automată este dezactivată.</string>
     <string name="screenshot_gesture_detect_alert_button">Activați din Setări</string>
